--- a/_config.yml
+++ b/_config.yml
@@ -114,6 +114,8 @@ sass:
 kramdown:
     input: GFM
     syntax_highlighter: rouge
+    hard_wrap: false
+
 gems:
   - jekyll-paginate
   - jekyll-sitemap
