update jekyll version and new post

--- a/_config.yml
+++ b/_config.yml
@@ -113,8 +113,8 @@ sass:
 
 kramdown:
     input: GFM
-    syntax_highlighter: rouge
     hard_wrap: false
+    syntax-highlighter: rouge
 
 gems:
   - jekyll-paginate
